fix: hide scrollbars for a cleaner interface

--- a/app/css/globals.css
+++ b/app/css/globals.css
@@ -41,6 +41,15 @@ main {
   cursor: none; /* Set default cursor style */
 }
 
+html {
+  overflow: hidden;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+html::-webkit-scrollbar {
+  display: none;
+}
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -51,7 +60,7 @@ body {
     rgb(var(--background-start-rgb));
   margin: 0px;
   font-family: 'Dirtyline';
-  overflow: auto; /* Ensure overflow is hidden */
+  /* overflow: auto;  */
 
 }
 
